[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Health: 100/100"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level: 1"

[node name="ExpLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXP: 0/100"

[node name="UpgradesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrades: None"  # 默认文本 